--- a/project.config
+++ b/project.config
@@ -1,6 +1,23 @@
 [project]
 	description = Packaging content for openstack/congress (distgit)
-[access]
-	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group openstack/congress-distgit-ptl
+  read = group openstack/congress-distgit-core
+  owner = group openstack/congress-distgit-ptl
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group openstack/congress-distgit-core
+	label-Code-Review = -2..+2 group openstack/congress-distgit-ptl
+	label-Verified = -2..+2 group openstack/congress-distgit-ptl
+	label-Workflow = -1..+1 group openstack/congress-distgit-core
+	label-Workflow = -1..+1 group openstack/congress-distgit-ptl
+	label-Workflow = -1..+0 group Registered Users
+	submit = group openstack/congress-distgit-ptl
+	read = group openstack/congress-distgit-core
+    read = group Registered Users
+[access "refs/meta/config"]
+    read = group openstack/congress-distgit-core
+    read = group Registered Users
+[receive]
+	requireChangeId = true
+[submit]
+	mergeContent = false
+	action = fast forward only
