--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	description = Packaging content for openstack/congress (distgit)
 [access "refs/*"]
   read = group openstack/congress-distgit-core
   owner = group openstack/congress-distgit-ptl
@@ -11,13 +10,13 @@
 	label-Workflow = -1..+1 group openstack/congress-distgit-ptl
 	label-Workflow = -1..+0 group Registered Users
 	submit = group openstack/congress-distgit-ptl
-	read = group openstack/congress-distgit-core
-    read = group Registered Users
-[access "refs/meta/config"]
+	read = group Registered Users
     read = group openstack/congress-distgit-core
+[access "refs/meta/config"]
     read = group Registered Users
+    read = group openstack/congress-distgit-core
 [receive]
 	requireChangeId = true
 [submit]
 	mergeContent = false
-	action = fast forward only
+	action = rebase if necessary
