Provides ACL and Groups

--- a/project.config
+++ b/project.config
@@ -1,22 +1,31 @@
-[project]
 [access "refs/*"]
-  read = group openstack/congress-distgit-core
-  owner = group openstack/congress-distgit-ptl
+  read = group openstack/congress-core
+  owner = group openstack/congress-ptl
+  owner = group rdo-superusers
 [access "refs/heads/*"]
-	label-Code-Review = -2..+2 group openstack/congress-distgit-core
-	label-Code-Review = -2..+2 group openstack/congress-distgit-ptl
-	label-Verified = -2..+2 group openstack/congress-distgit-ptl
-	label-Workflow = -1..+1 group openstack/congress-distgit-core
-	label-Workflow = -1..+1 group openstack/congress-distgit-ptl
-	label-Workflow = -1..+0 group Registered Users
-	submit = group openstack/congress-distgit-ptl
-	read = group Registered Users
-    read = group openstack/congress-distgit-core
+  label-Code-Review = -2..+2 group openstack/congress-core
+  label-Code-Review = -2..+2 group openstack/congress-ptl
+  label-Code-Review = -2..+2 group rdo-provenpackagers
+  label-Code-Review = -2..+2 group rdo-superusers
+  submit = group openstack/congress-ptl
+  submit = group rdo-superusers
+  read = group Registered Users
+  read = group openstack/congress-core
+  read = group rdo-provenpackagers
+  label-Verified = -2..+2 group openstack/congress-ptl
+  label-Verified = -2..+2 group rdo-superusers
+  label-Workflow = -1..+0 group Registered Users
+  label-Workflow = -1..+1 group openstack/congress-core
+  label-Workflow = -1..+1 group openstack/congress-ptl
+  label-Workflow = -1..+1 group rdo-provenpackagers
 [access "refs/meta/config"]
-    read = group Registered Users
-    read = group openstack/congress-distgit-core
+  read = group Registered Users
+  read = group openstack/congress-core
+  read = group rdo-provenpackagers
 [receive]
-	requireChangeId = true
+  requireChangeId = true
 [submit]
-	mergeContent = false
-	action = rebase if necessary
+  mergeContent = false
+  action = rebase if necessary
+[project]
+        description = Packaging of upstream congress
